--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.7.5+3
   video_player: ^2.1.4
+  circular_countdown_timer: ^0.2.0
 
 dev_dependencies:
   flutter_test:
