--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,17 +27,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  image_picker: ^0.7.5+3
-  video_player: ^2.1.4
-  circular_countdown_timer: ^0.2.0
-  file_picker: ^3.0.0
-  pdf_text: ^0.5.0
-  pdf: ^3.0.1
-  uuid: ^3.0.1
-  optional: ^6.0.0-nullsafety.0
-  rake: ^1.0.1
-  google_fonts: ^2.1.0
+  cupertino_icons: 
+  image_picker: 
+  video_player: 
+  circular_countdown_timer: 
+  file_picker: 
+  pdf_text: 
+  pdf: 
+  uuid: 
+  optional: 
+  rake: 
+  google_fonts:
+  sawo: 
 
 dev_dependencies:
   flutter_test:
